--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
             url 'https://dl.bintray.com/cylan/Iot'
         }
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
 
