--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,13 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Aug 17 09:04:49 CST 2017
-systemProp.https.proxyPort=8119
-systemProp.http.proxyHost=vps.cylan.com.cn
+#-DsocksProxyHost=127.0.0.1 -DsocksProxyPort=1087
+#systemProp.https.proxyPort=1087
+#systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx4608M
 org.gradle.daemon=true
-systemProp.https.proxyHost=vps.cylan.com.cn
+#systemProp.https.proxyHost=127.0.0.1
 org.gradle.parallel=true
-systemProp.http.proxyPort=8119
+#systemProp.http.proxyPort=1087
 android.useDeprecatedNdk=true
+
