版本客户端需要支持康凯思门铃g729编码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -326,6 +326,7 @@ dependencies {
                 ext : 'aar'
         ])
     }
+    compile(group: 'com.cylan.library', name: 'iotsdk', version: '1.0-20171016.064101-13', ext: 'aar')
     //谷歌推送
     compile files('libs/MiPush_SDK_Client_3_2_2.jar')
     compile('com.mikepenz:fastadapter:2.6.2@aar') {
