陌生人面孔子页面

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx4608M
 org.gradle.daemon=true
 android.useDeprecatedNdk=true
-
+android.enableD8=true
