--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ allprojects {
         }
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
+        maven { url "http://objectbox.net/beta-repo/" }
     }
 }
 
