--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,9 +91,9 @@ android {
         _doby {
             java.srcDirs = ['src/_doby/java']
         }
-        _cell_c {
-            java.srcDirs = ['src/_cell_c/java']
-        }
+//        _cell_c {
+//            java.srcDirs = ['src/_cell_c/java']
+//        }
     }
     testOptions {
         unitTests.returnDefaultValues = true
@@ -181,39 +181,39 @@ android {
 
 
     productFlavors {
-        _yun {
-            //vid vkey已经搬到Security.java
-
-            //官方运营
-            applicationId "com.cylan.cleverdog"
-            versionName vName
-            versionCode vCode//0002,ekPVDWnSKiTkwCT3QQkXd0U0SolaYqr1
-            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.cleverdog.hms.update.provider",
-                                    "HW_APP_ID"            : "\\ 100044173",
-                                    "VID"                  : "\\ 0001",
-                                    "VKEY"                 : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
-                                    "qqAppId"              : "\\ 1106287288",
-                                    "qqAppKey"             : "yNsvacSiQTzArpTg",
-                                    "mtaAppKey"            : "Aqc1103156296",
-                                    "weChatAppId"          : "wx401c2537655ba462",
-                                    "weChatAppSecret"      : "fbb7b851f057882b1f8d3b9fb20506ab",
-                                    "sinaAppKey"           : "\\ 2656168776",
-                                    "sinaAppSecret"        : "f7f61f712dd94d538514799c462d2083",
-                                    "SERVER"               : "yun.jfgou.com:443",
-                                    "GCM_APP_ID"           : "\\ 985304692675",
-                                    "ApplicationId"        : applicationId,
-                                    "XiaoMiAppId"          : "\\ 5881759615576",
-                                    "XiaoMiAppKey"         : "MTB5DeGP/CMKSgAiQsUIuw==",
-                                    "BUGLY_APPID"          : "f1f2edf649",
-                                    "BUGLY_APP_VERSION"    : versionName,
-                                    "BUGLY_APP_CHANNEL"    : "cylan",
-                                    "TWITTER_APP_KEY"      : "kvWyAC3sYGxaEmfkKDVWrKFa7",
-                                    "TWITTER_APP_SECRET"   : "S447fVyJ2zZsFwDQUn3Ra11SdQlmmBVyVn4cOsSSiid8nboBbi",
-                                    "FACEBOOK_APP_KEY"     : "444251309281886",
-                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
-
-            ]
-        }
+//        _yun {
+//            //vid vkey已经搬到Security.java
+//
+//            //官方运营
+//            applicationId "com.cylan.cleverdog"
+//            versionName vName
+//            versionCode vCode//0002,ekPVDWnSKiTkwCT3QQkXd0U0SolaYqr1
+//            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.cleverdog.hms.update.provider",
+//                                    "HW_APP_ID"            : "\\ 100044173",
+//                                    "VID"                  : "\\ 0001",
+//                                    "VKEY"                 : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
+//                                    "qqAppId"              : "\\ 1106287288",
+//                                    "qqAppKey"             : "yNsvacSiQTzArpTg",
+//                                    "mtaAppKey"            : "Aqc1103156296",
+//                                    "weChatAppId"          : "wx401c2537655ba462",
+//                                    "weChatAppSecret"      : "fbb7b851f057882b1f8d3b9fb20506ab",
+//                                    "sinaAppKey"           : "\\ 2656168776",
+//                                    "sinaAppSecret"        : "f7f61f712dd94d538514799c462d2083",
+//                                    "SERVER"               : "yun.jfgou.com:443",
+//                                    "GCM_APP_ID"           : "\\ 985304692675",
+//                                    "ApplicationId"        : applicationId,
+//                                    "XiaoMiAppId"          : "\\ 5881759615576",
+//                                    "XiaoMiAppKey"         : "MTB5DeGP/CMKSgAiQsUIuw==",
+//                                    "BUGLY_APPID"          : "f1f2edf649",
+//                                    "BUGLY_APP_VERSION"    : versionName,
+//                                    "BUGLY_APP_CHANNEL"    : "cylan",
+//                                    "TWITTER_APP_KEY"      : "kvWyAC3sYGxaEmfkKDVWrKFa7",
+//                                    "TWITTER_APP_SECRET"   : "S447fVyJ2zZsFwDQUn3Ra11SdQlmmBVyVn4cOsSSiid8nboBbi",
+//                                    "FACEBOOK_APP_KEY"     : "444251309281886",
+//                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
+//
+//            ]
+//        }
         _doby {
             applicationId "com.cylan.doby"
             versionName vName
@@ -245,39 +245,38 @@ android {
                                     'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
             ]
         }
-        _cell_c {
-            applicationId "com.cylan.cleverdog.cell_c"
-            versionName vName
-            versionCode vCode
-            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.cleverdog.cell_c.hms.update.provider",
-                                    "HW_APP_ID"            : "\\ 100005405",
-                                    "VID"                  : "\\ 0060",
-                                    "VKEY"                 : "doLUb8CEObqCKQpA05ytKKHPu5Q3SvYX",
-                                    "qqAppId"              : "\\ 1104534926",
-                                    "qqAppKey"             : "lfQJHRh8dDCJtwHu",
-                                    "twitterAppKey"        : "kCEeFDWzz5xHi8Ej9Wx6FWqRL",
-                                    "twitterAppSecret"     : "Ih4rUwyhKreoHqzd9BeIseAKHoNRszi2rT2udlMz6ssq9LeXw5",
-                                    "mtaAppKey"            : "ATQ1JV694AKT",
-                                    "weChatAppId"          : "wx382033a16e5cc4a5",
-                                    "weChatAppSecret"      : "wx3081bcdae8a842cf",
-                                    "sinaAppKey"           : "\\ 1821035549",
-                                    "sinaAppSecret"        : "",
-                                    "SERVER"               : "yun.jfgou.com:443",
-                                    "GCM_APP_ID"           : "\\ 985304692675",
-                                    "ApplicationId"        : applicationId,
-                                    "XiaoMiAppId"          : "\\ 5721736791425",
-                                    "XiaoMiAppKey"         : "ICRz/WmxDXeT4XGEWT2aBQ==",
-                                    "BUGLY_APPID"          : "2e94bf542f",
-                                    "BUGLY_APP_VERSION"    : versionName,
-                                    "BUGLY_APP_CHANNEL"    : "cell_c",
-                                    "TWITTER_APP_KEY"      : "",
-                                    "TWITTER_APP_SECRET"   : "",
-                                    "FACEBOOK_APP_KEY"     : "",
-                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
-            ]
-        }
+//        _cell_c {
+//            applicationId "com.cylan.cleverdog.cell_c"
+//            versionName vName
+//            versionCode vCode
+//            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.cleverdog.cell_c.hms.update.provider",
+//                                    "HW_APP_ID"            : "\\ 100005405",
+//                                    "VID"                  : "\\ 0060",
+//                                    "VKEY"                 : "doLUb8CEObqCKQpA05ytKKHPu5Q3SvYX",
+//                                    "qqAppId"              : "\\ 1104534926",
+//                                    "qqAppKey"             : "lfQJHRh8dDCJtwHu",
+//                                    "twitterAppKey"        : "kCEeFDWzz5xHi8Ej9Wx6FWqRL",
+//                                    "twitterAppSecret"     : "Ih4rUwyhKreoHqzd9BeIseAKHoNRszi2rT2udlMz6ssq9LeXw5",
+//                                    "mtaAppKey"            : "ATQ1JV694AKT",
+//                                    "weChatAppId"          : "wx382033a16e5cc4a5",
+//                                    "weChatAppSecret"      : "wx3081bcdae8a842cf",
+//                                    "sinaAppKey"           : "\\ 1821035549",
+//                                    "sinaAppSecret"        : "",
+//                                    "SERVER"               : "yun.jfgou.com:443",
+//                                    "GCM_APP_ID"           : "\\ 985304692675",
+//                                    "ApplicationId"        : applicationId,
+//                                    "XiaoMiAppId"          : "\\ 5721736791425",
+//                                    "XiaoMiAppKey"         : "ICRz/WmxDXeT4XGEWT2aBQ==",
+//                                    "BUGLY_APPID"          : "2e94bf542f",
+//                                    "BUGLY_APP_VERSION"    : versionName,
+//                                    "BUGLY_APP_CHANNEL"    : "cell_c",
+//                                    "TWITTER_APP_KEY"      : "",
+//                                    "TWITTER_APP_SECRET"   : "",
+//                                    "FACEBOOK_APP_KEY"     : "",
+//                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
+//            ]
+//        }
     }
-
 
 }
 
@@ -443,29 +442,29 @@ dependencies {
 
 /////////////////编译过滤器/////////////////////////////////
 //只需要在一个文件中读出需要编译的 variant名字
-def List<String> getBuildVariantList() {
-    Properties vFile = new Properties()
-    File file = rootProject.file('variant.properties')
-    if (file.exists())
-        vFile.load(file.newDataInputStream())
-    else throw new IllegalArgumentException("variant.properties 文件不存在")
-    String buildVariant = vFile.getProperty('buildVariant')
-    if (buildVariant == null) return new ArrayList<String>()
-    ArrayList<String> vList = new ArrayList(Arrays.asList(buildVariant.split(",")))
-    println("hunt..." + vList)
-    return vList
-}
+//def List<String> getBuildVariantList() {
+//    Properties vFile = new Properties()
+//    File file = rootProject.file('variant.properties')
+//    if (file.exists())
+//        vFile.load(file.newDataInputStream())
+//    else throw new IllegalArgumentException("variant.properties 文件不存在")
+//    String buildVariant = vFile.getProperty('buildVariant')
+//    if (buildVariant == null) return new ArrayList<String>()
+//    ArrayList<String> vList = new ArrayList(Arrays.asList(buildVariant.split(",")))
+//    println("hunt..." + vList)
+//    return vList
+//}
+//
+//List<String> variantFilterList = getBuildVariantList()
 
-List<String> variantFilterList = getBuildVariantList()
-
-android.variantFilter { variant ->
-    String name = variant.getFlavors().get(0).name
-    boolean toBuild = variantFilterList.contains(name)
-    println("oem...." + name + ",toBuild?" + toBuild)
-    if (!toBuild) {
-        variant.setIgnore(true)//true:不编译此variant
-    }
-}
+//android.variantFilter { variant ->
+//    String name = variant.getFlavors().get(0).name
+//    boolean toBuild = variantFilterList.contains(name)
+//    println("oem...." + name + ",toBuild?" + toBuild)
+//    if (!toBuild) {
+//        variant.setIgnore(true)//true:不编译此variant
+//    }
+//}
 /////////////////////////////////////////////////////
 //谷歌推送
 //apply plugin: 'com.google.gms.google-services'
