--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'java'
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.auto.service:auto-service:1.0-rc2'
     compile 'com.squareup:javapoet:1.8.0'
 }
