--- a/app/build.gradle
+++ b/app/build.gradle
@@ -181,39 +181,39 @@ android {
 
 
     productFlavors {
-//        _yun {
-//            //vid vkey已经搬到Security.java
-//
-//            //官方运营
-//            applicationId "com.cylan.cleverdog"
-//            versionName vName
-//            versionCode vCode//0002,ekPVDWnSKiTkwCT3QQkXd0U0SolaYqr1
-//            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.cleverdog.hms.update.provider",
-//                                    "HW_APP_ID"            : "\\ 100044173",
-//                                    "VID"                  : "\\ 0001",
-//                                    "VKEY"                 : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
-//                                    "qqAppId"              : "\\ 1106287288",
-//                                    "qqAppKey"             : "yNsvacSiQTzArpTg",
-//                                    "mtaAppKey"            : "Aqc1103156296",
-//                                    "weChatAppId"          : "wx401c2537655ba462",
-//                                    "weChatAppSecret"      : "fbb7b851f057882b1f8d3b9fb20506ab",
-//                                    "sinaAppKey"           : "\\ 2656168776",
-//                                    "sinaAppSecret"        : "f7f61f712dd94d538514799c462d2083",
-//                                    "SERVER"               : "yun.jfgou.com:443",
-//                                    "GCM_APP_ID"           : "\\ 985304692675",
-//                                    "ApplicationId"        : applicationId,
-//                                    "XiaoMiAppId"          : "\\ 5881759615576",
-//                                    "XiaoMiAppKey"         : "MTB5DeGP/CMKSgAiQsUIuw==",
-//                                    "BUGLY_APPID"          : "f1f2edf649",
-//                                    "BUGLY_APP_VERSION"    : versionName,
-//                                    "BUGLY_APP_CHANNEL"    : "cylan",
-//                                    "TWITTER_APP_KEY"      : "kvWyAC3sYGxaEmfkKDVWrKFa7",
-//                                    "TWITTER_APP_SECRET"   : "S447fVyJ2zZsFwDQUn3Ra11SdQlmmBVyVn4cOsSSiid8nboBbi",
-//                                    "FACEBOOK_APP_KEY"     : "444251309281886",
-//                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
-//
-//            ]
-//        }
+        _yun {
+            //vid vkey已经搬到Security.java
+
+            //官方运营
+            applicationId "com.cylan.cleverdog"
+            versionName vName
+            versionCode vCode//0002,ekPVDWnSKiTkwCT3QQkXd0U0SolaYqr1
+            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.cleverdog.hms.update.provider",
+                                    "HW_APP_ID"            : "\\ 100044173",
+                                    "VID"                  : "\\ 0001",
+                                    "VKEY"                 : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
+                                    "qqAppId"              : "\\ 1106287288",
+                                    "qqAppKey"             : "yNsvacSiQTzArpTg",
+                                    "mtaAppKey"            : "Aqc1103156296",
+                                    "weChatAppId"          : "wx401c2537655ba462",
+                                    "weChatAppSecret"      : "fbb7b851f057882b1f8d3b9fb20506ab",
+                                    "sinaAppKey"           : "\\ 2656168776",
+                                    "sinaAppSecret"        : "f7f61f712dd94d538514799c462d2083",
+                                    "SERVER"               : "yun.jfgou.com:443",
+                                    "GCM_APP_ID"           : "\\ 985304692675",
+                                    "ApplicationId"        : applicationId,
+                                    "XiaoMiAppId"          : "\\ 5881759615576",
+                                    "XiaoMiAppKey"         : "MTB5DeGP/CMKSgAiQsUIuw==",
+                                    "BUGLY_APPID"          : "f1f2edf649",
+                                    "BUGLY_APP_VERSION"    : versionName,
+                                    "BUGLY_APP_CHANNEL"    : "cylan",
+                                    "TWITTER_APP_KEY"      : "kvWyAC3sYGxaEmfkKDVWrKFa7",
+                                    "TWITTER_APP_SECRET"   : "S447fVyJ2zZsFwDQUn3Ra11SdQlmmBVyVn4cOsSSiid8nboBbi",
+                                    "FACEBOOK_APP_KEY"     : "444251309281886",
+                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
+
+            ]
+        }
         _doby {
             applicationId "com.cylan.doby"
             versionName vName
