--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@
 # org.gradle.parallel=true
 #Thu Aug 17 09:04:49 CST 2017
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs=-Xmx5120m
 org.gradle.daemon=true
 android.useDeprecatedNdk=true
-android.enableD8=true
+#android.enableD8=true
