--- a/app/build.gradle
+++ b/app/build.gradle
@@ -436,6 +436,8 @@ dependencies {
     // If you want to use Kotlin syntax
     compile 'com.trello:rxlifecycle-kotlin:1.0'
     compile 'com.trello:rxlifecycle-components:1.0'
+    kapt 'com.github.bumptech.glide:compiler:4.3.1'
+    compile 'com.github.bumptech.glide:okhttp3-integration:4.3.1'
 
 // If you want to use Kotlin syntax with Android Lifecycle
 //    compile(group: 'com.cylan.library', name: 'iotsdk', version: '1.0-20171019.084208-15', ext: 'pom')
