--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,9 +116,9 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.cylan.jiafeigou.base.module.JFGGlideCacheModule"
-            android:value="GlideModule" />
+        <!--<meta-data-->
+            <!--android:name="com.cylan.jiafeigou.base.module.JFGGlideCacheModule"-->
+            <!--android:value="GlideModule" />-->
         <meta-data
             android:name="BUGLY_APPID"
             android:value="${BUGLY_APPID}" />
