消息页面弹出菜单位置错乱

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -202,7 +202,7 @@ android {
                                     "weChatAppSecret"      : "fbb7b851f057882b1f8d3b9fb20506ab",
                                     "sinaAppKey"           : "\\ 2656168776",
                                     "sinaAppSecret"        : "f7f61f712dd94d538514799c462d2083",
-                                    "SERVER"               : "yun.jfgou.com:443",
+                                    "SERVER"               : "alitest2.jfgou.com:443",
                                     "GCM_APP_ID"           : "\\ 985304692675",
                                     "ApplicationId"        : applicationId,
                                     "XiaoMiAppId"          : "\\ 5881759615576",
@@ -232,7 +232,7 @@ android {
                                     "weChatAppSecret"      : "b867a2e433701bc00dffda2099655d7e",
                                     "sinaAppKey"           : "\\ 2444488421",
                                     "sinaAppSecret"        : "dfba216fe44f0d6613cdda1557790a31",
-                                    "SERVER"               : "yf.jfgou.com:450",
+                                    "SERVER"               : "alitest2.jfgou.com:443",
                                     "GCM_APP_ID"           : "\\ 985304692675",
                                     "ApplicationId"        : applicationId,
                                     "XiaoMiAppId"          : "\\ 5981759669387",
