更新 aidemo 图标名称

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -247,6 +247,37 @@ android {
                                     'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
             ]
         }
+        _aidemo {
+            applicationId "com.cylan.doby"
+            versionName vName
+            versionCode vCode
+            manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.doby.hms.update.provider",
+                                    "HW_APP_ID"            : "\\ 100043669",
+                                    "VID"                  : "\\ 0002",
+                                    "VKEY"                 : "F6rHsK2c3af7SAV0CKsRQpwa14QijAdB",
+                                    "qqAppId"              : "\\ 1106279832",
+                                    "qqAppKey"             : "vqSXNT11dsbu24io",
+                                    "mtaAppKey"            : "ATQ1JV694AKT",
+                                    "weChatAppId"          : "wx81d893be5216671c",
+                                    "weChatAppSecret"      : "b867a2e433701bc00dffda2099655d7e",
+                                    "sinaAppKey"           : "\\ 2444488421",
+                                    "sinaAppSecret"        : "dfba216fe44f0d6613cdda1557790a31",
+                                    "SERVER"               : "alitest2.jfgou.com:443",
+                                    "GCM_APP_ID"           : "\\ 985304692675",
+                                    "ApplicationId"        : applicationId,
+                                    "XiaoMiAppId"          : "\\ 5981759669387",
+                                    "XiaoMiAppKey"         : "AFtTDKfrkO6y1WpxoGDbCw==",
+                                    "BUGLY_APPID"          : "f1f2edf649",
+                                    "BUGLY_APP_VERSION"    : versionName,
+                                    "BUGLY_APP_CHANNEL"    : "doby",
+                                    "TWITTER_APP_KEY"      : "P4mZddIEumAsk7OnzNWpcrQy8",
+                                    "TWITTER_APP_SECRET"   : "1T5Pg7UBRVkq6OSvOs9EBEGiMXVLYmAeOdW3HPTazuqjWyzRAm",
+                                    "FACEBOOK_APP_KEY"     : "1698182270477391",
+                                    //<error>Desktop applications only support the oauth_callback value 'oob'</error>
+                                    //新增的app需要在twitter后台,填上callbackUrl
+                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
+            ]
+        }
 //        _cell_c {
 //            applicationId "com.cylan.cleverdog.cell_c"
 //            versionName vName
