--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 //        maven { url 'https://maven.fabric.io/public' }
         maven { url "http://objectbox.net/beta-repo/" }
         maven { url "https://jitpack.io" }
+        maven { url "http://yf.cylan.com.cn:82/artifactory/libs-snapshot-local" }
 
     }
     dependencies {
@@ -37,6 +38,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
         maven { url "http://objectbox.net/beta-repo/" }
+        maven { url "http://yf.cylan.com.cn:82/artifactory/libs-snapshot-local" }
     }
 }
 
