--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.cylan.jiafeigou"
     android:versionCode="999"
     android:versionName="888">
@@ -117,8 +116,8 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme">
         <!--<meta-data-->
-            <!--android:name="com.cylan.jiafeigou.base.module.JFGGlideCacheModule"-->
-            <!--android:value="GlideModule" />-->
+        <!--android:name="com.cylan.jiafeigou.base.module.JFGGlideCacheModule"-->
+        <!--android:value="GlideModule" />-->
         <meta-data
             android:name="BUGLY_APPID"
             android:value="${BUGLY_APPID}" />
@@ -263,11 +262,11 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden" >
+            android:windowSoftInputMode="adjustPan|stateHidden">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
 
@@ -783,6 +782,13 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".n.view.mine.HomeMineHelpActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity
+            android:name=".n.view.bind.WireBindActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
