有线模式根据 OS,和当前账号列表的设备来过滤

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -766,8 +766,7 @@
             android:windowSoftInputMode="adjustPan|stateHidden" />
 
         <service
-            android:name=".server.MyService"
-            android:enabled="false"
+            android:name=".n.engine.AppServices"
             android:exported="false" />
 
         <activity android:name=".n.view.activity.ApSettingActivity">
