--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu Aug 17 09:04:49 CST 2017
-org.gradle.parallel=true
+#Wed Nov 29 14:24:12 CST 2017
+systemProp.http.proxyHost=ss.cylan.com.cn
 org.gradle.jvmargs=-Xmx5120m
+-XX=MaxPermSize\=512m
 org.gradle.daemon=true
+org.gradle.parallel=true
+systemProp.http.proxyPort=8119
 android.useDeprecatedNdk=true
-#android.enableD8=true
