--- a/app/build.gradle
+++ b/app/build.gradle
@@ -245,7 +245,7 @@ android {
             ]
         }
         _aidemo {
-            applicationId "com.sunrise.camera"
+            applicationId "com.cylan.doby"
             versionName vName
             versionCode vCode
             manifestPlaceholders = ["HW_PUSH_AUTHORITIES"  : "com.cylan.doby.hms.update.provider",
