--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     repositories {
         maven { url 'https://dl.google.com/dl/android/maven2/' }
         jcenter()
-        maven { url "http://objectbox.net/beta-repo/" }
+//        maven { url "http://objectbox.net/beta-repo/" }
     }
     dependencies {
         //要对应java1.8，2.2.0才能使用unit测试。idea/misc.xml
@@ -19,7 +19,7 @@ buildscript {
         //谷歌推送
         classpath 'com.google.gms:google-services:3.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.50"
-        classpath "io.objectbox:objectbox-gradle-plugin:$objectBoxVersion"
+//        classpath "io.objectbox:objectbox-gradle-plugin:$objectBoxVersion"
     }
 }
 
@@ -33,7 +33,7 @@ allprojects {
             url 'https://dl.bintray.com/cylan/maven/'
         }
         maven { url "https://jitpack.io" }
-        maven { url "http://objectbox.net/beta-repo/" }
+//        maven { url "http://objectbox.net/beta-repo/" }
         maven { url "http://yf.cylan.com.cn:82/artifactory/libs-release-local" } // 改为release 地址
     }
 }
