1.修复注册人脸拍照时在一些强制横屏拍照的手机上获取不到拍照结果 bug 2.修复查看直播时流量按钮闪一下 bug 3.修复某些情况下查看访问详情无法点击 bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -758,7 +758,7 @@
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.cam.RegisterFaceActivity"
-            android:configChanges="locale|orientation|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
