1.有线设备无网络 ssid 导致现在离线 bug 2.区域侦测有时候图像整体变小 bug 3.修复没有清晰度切换的设备直播是清晰度切换闪一下 bug 4.修复门铃直播对讲按钮置灰不可点击 bug 5.新增人脸删除接口 6.更新语言包,图标 7.发送 WiFi 配置逻辑调整

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,9 @@ android {
         _doby {
             java.srcDirs = ['src/_doby/java']
         }
+        _aidemo {
+            java.srcDirs = ['src/_doby/java']
+        }
 //        _cell_c {
 //            java.srcDirs = ['src/_cell_c/java']
 //        }
@@ -263,7 +266,7 @@ android {
                                     "FACEBOOK_APP_KEY"     : "1698182270477391",
                                     //<error>Desktop applications only support the oauth_callback value 'oob'</error>
                                     //新增的app需要在twitter后台,填上callbackUrl
-                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb'
+                                    'appAuthRedirectScheme': 'com.googleusercontent.apps.464988505094-5jp3299cje1p1vqtncdddfasgdgvh5bb',
             ]
         }
 //        _cell_c {
